--- a/store/config/database.yml
+++ b/store/config/database.yml
@@ -1,9 +1,11 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby -v 1.2.4
+# gem install mysql -v 2.8.1
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  timeout: 5000
+  adapter: mysql
+  encoding: utf8
+  database: store_dev
+  pool: 5
+  username:
+  password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
